--- a/Predict_Fish_Weight.Rmd
+++ b/Predict_Fish_Weight.Rmd
@@ -16,28 +16,101 @@ output:
 ```{r include=FALSE,echo=FALSE}
 require(tigerstats)
 require(tidyverse)
+library(dplyr)
+library(leaps)
+fish = read_csv("Fish.csv")
 ```
 
 # Predicting Fish Weight
+Find the best model using 2 variables to predict Perch weight, and compare this to the best overall model. 
 
 
 ## Perch
 
+```{r}
+perch = filter(fish, Species == 'Perch')
+```
+
 ### Best Models
 
 ### Best Two regressor model
 
+
+```{r}
+modelperch = regsubsets(Weight ~ Length1 + Length2 + Length3 + Height + Width, data = perch, )
+summary(modelperch)
+```
+
+
+## Best two variable equation 
+
+Weight = -536 + 74.77*Height + 69.62*Width
 
 ## Pike
 
-### Best Models
+```{r}
+Pike = filter(fish, Species == 'Pike')
+```
+
+## Best Model Rogressor
+
+```{r}
+modelPike = regsubsets(Weight ~ Length1 + Length2 + Length3 + Height + Width, data = Pike, )
+summary(modelPike)
+```
+
+```{r}
+bestPike = lm(Weight ~ Length1 + Length3, data = Pike)
+summary(bestPike)
+```
+
+
+
+### Best Two variable equation
+
+Weight = -1675.79 + -105.64*Length1 + 141.25*Length3
+
+
+
+## Roach
+
+```{r}
+Roach = filter(fish, Species == 'Roach')
+```
 
 ### Best Two regressor model
+
+```{r}
+modelRoach = regsubsets(Weight ~ Length1 + Length2 + Length3 + Height + Width, data = Roach, )
+summary(modelRoach)
+```
+
+```{r}
+bestRoach = lm(Weight ~ Width + Length3, data = Roach)
+summary(bestRoach)
+```
+
+
+
+
+
+
+
+
+
 
 ## Roach
 
 ### Best Models
 
-### Best Two regressor model
+### Best Two variable equation
+
+Weight = -319.188 + 72.300*Width + 8.278*Length3
 
 ## Final Summary Statements
+
+The best models using two variable to predict Perch weight, are Height & Width. 
+
+The best model using 2 variables to predict Pike weight, are Length1 and Length3 models.
+
+The best model using 2 variables to predict Roach weight, are Width and Length3.
